config/kubernetes/base/operator.yaml
# Copyright 2020 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: tekton-operator
  template:
    metadata:
      labels:
        name: tekton-operator
        app: tekton-operator
    spec:
      serviceAccountName: tekton-operator
      containers:
      - name: tekton-operator-lifecycle  # all reconcilers except tektoninstallerset reconciler
        image: ko://github.com/tektoncd/operator/cmd/kubernetes/operator
        args:
        - "-controllers"
        - "tektonconfig,tektonpipeline,tektontrigger,tektonchain,tektonresult,tektondashboard,manualapprovalgate,tektonpruner,tektonkueue,tektonmulticlusterproxyaae,openshiftpipelinesascode"
        - "-unique-process-name"
        - "tekton-operator-lifecycle"
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - "ALL"
          seccompProfile:
            type: RuntimeDefault
      - name: tekton-operator-cluster-operations  # tektoninstallerset reconciler
        image: ko://github.com/tektoncd/operator/cmd/kubernetes/operator
        args:
        - "-controllers"
        - "tektoninstallerset"
        - "-unique-process-name"
        - "tekton-operator-cluster-operations"
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - "ALL"
          seccompProfile:
            type: RuntimeDefault
